--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -1,5 +1,10 @@
+@import "../../global.scss";
+
 .topbar {
   width: 100%;
   height: 70px;
-  background-color: #150123;
+  background-color: $mainColor;
+  position: fixed;
+  top: 0;
+  z-index: 2;
 }
