--- a/src/components/intro/intro.scss
+++ b/src/components/intro/intro.scss
@@ -7,10 +7,10 @@
     overflow: hidden;
 
     .imgContainer {
-      width: 700px;
+      /*       width: 700px;
       height: 700px;
       background-color: crimson;
-      border-radius: 50%;
+      border-radius: 50%; */
       display: flex;
       align-items: flex-end;
       justify-items: center;
@@ -63,6 +63,7 @@
       position: absolute;
       bottom: 10px;
       left: 25%;
+
       img {
         width: 30px;
         animation: arrowBlink 2s infinite;
