--- a/src/components/works/works.scss
+++ b/src/components/works/works.scss
@@ -3,12 +3,29 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  position: relative;
+
+  .arrow {
+    height: 50px;
+    position: absolute;
+    cursor: pointer;
+
+    &.left {
+      left: 100px;
+      transform: rotateY(180deg);
+    }
+
+    &.right {
+      right: 100px;
+    }
+  }
 
   .slider {
     height: 350px;
     display: flex;
     position: absolute;
     left: 0;
+    transition: all 1s ease;
     .container {
       width: 100vw;
       display: flex;
